[project]
name = "cloud-saviour"
version = "0.1.0"
description = "OpenEnv RL-based cloud optimization environment"
authors = [{ name = "Kamalesh" }]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests",
  "openai",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"